--- a/vignettes/dignostics.Rmd
+++ b/vignettes/dignostics.Rmd
@@ -22,11 +22,11 @@ Data from the latest version of the Keys to Soil Taxonomy related to diagnostic 
 
 You can load the full supporting data directly with:
 
-```r
+```{r}
 data(ST_features, package = "SoilTaxonomy")
 ```
 
-A helpful wrapper function is provided, `get_ST_features()` that helps with obtaining information of interest to specific features or groups of features.
+A  wrapper function, `get_ST_features()`,  is provided to help with obtaining information of interest to specific features or groups of features.
 
 We will inspect the "Mollic Epipedon" information to see the structure of the `ST_features` _data.frame_.
 
@@ -43,11 +43,11 @@ Columns included in the `ST_features`, and usable for filtering as arguments to 
  - `chapter` - Chapter number in Keys to Soil Taxonomy (latest edition)
  - `page` - Page number in Keys to Soil Taxonomy (latest edition)
  - `description` - Narrative description (may not be present for all features)
- - `criteria` - "Key" to identifying the feature; logical criteria separated by and/or
+ - `criteria` - "Key" to identifying the feature; logical criteria separated by AND/Or
 
 Say we are interested in finding criteria to distinguish the epipedons (surface diagnostic horizons).
 
-We can use the `group=...` argument to get all of the "surface" features as a data.frame.
+We can use the `group=...` argument to get all of the "surface" features as a _data.frame_.
 
 ```{r}
 epipedons <- get_ST_features(group = "surface")
@@ -69,7 +69,7 @@ subset(epipedons, name == "Anthropic Epipedon")$description
 subset(epipedons, name == "Anthropic Epipedon")$criteria
 ```
 
-If we want to compare the basic definitions in Chapter 2 with the features in Chapter 3, we can subset ST_features using the chapter (or page!) numbers.
+If we want to compare the basic definitions in Chapter 2 with the features in Chapter 3, we can subset `ST_features` using the `chapter` or `page` number (or range).
 
 ```{r}
 get_ST_features(chapter = 2)$name
@@ -77,4 +77,10 @@ get_ST_features(chapter = 2)$name
 
 ```{r}
 get_ST_features(chapter = 3)$name
+```
+
+If we want to get the definitions found on pages 18 to 20 (latest Keys to Soil Taxonomy), we can specify a vector containing desired levels of `page`:
+
+```{r}
+get_ST_features(page = 18:20)$name
 ```
