--- a/README.Rmd
+++ b/README.Rmd
@@ -14,7 +14,7 @@ knitr::opts_chunk$set(
 ```
 
 <!-- badges: start -->
-[![R-CMD-check](https://github.com/ncss-tech/SoilTaxonomy/workflows/R-CMD-check/badge.svg)](https://github.com/ncss-tech/SoilTaxonomy/actions)
+[![R-CMD-check](https://github.com/ncss-tech/SoilTaxonomy/workflows/R-CMD-check/badge.svg)](https://github.com/ncss-tech/SoilTaxonomy/actions/workflows/R-CMD-check.yml)
 [![Codecov test coverage](https://codecov.io/gh/ncss-tech/SoilTaxonomy/branch/master/graph/badge.svg)](https://codecov.io/gh/ncss-tech/SoilTaxonomy?branch=master)
 [![CRAN Status](https://www.r-pkg.org/badges/version-last-release/SoilTaxonomy)](https://cran.r-project.org/package=SoilTaxonomy)
 [![runiverse-SoilTaxonomy](https://ncss-tech.r-universe.dev/badges/SoilTaxonomy)](https://github.com/ncss-tech/SoilTaxonomy)
@@ -78,7 +78,7 @@ Several vignettes are included with the package to demonstrate basic functionali
  
  - [Diagnostic Features & Characteristics](https://ncss-tech.github.io/SoilTaxonomy/articles/diagnostics.html)
  
- - [Family-level Taxonomic Classes](https://ncss-tech.github.io/SoilTaxonomy/articles/family-level_Taxonomy.html)
+ - [Family-level Taxonomic Classes](https://ncss-tech.github.io/SoilTaxonomy/articles/family-level_taxonomy.html)
  
  
 ### Featured Functions
