--- a/vignettes/family-level_taxonomy.Rmd
+++ b/vignettes/family-level_taxonomy.Rmd
@@ -8,7 +8,10 @@ vignette: >
 ---
 
 ```{r, include = FALSE}
+.soilDB_is_sufficient <- function() (tryCatch(utils::packageVersion("soilDB"),
+                                             error = function(e) "0.0.0") >= "2.7.3")
 knitr::opts_chunk$set(
+  eval = .soilDB_is_sufficient(),
   collapse = TRUE,
   comment = "#>"
 )
