--- a/vignettes/family-level_taxonomy.Rmd
+++ b/vignettes/family-level_taxonomy.Rmd
@@ -8,10 +8,8 @@ vignette: >
 ---
 
 ```{r, include = FALSE}
-.soilDB_is_sufficient <- function() (tryCatch(utils::packageVersion("soilDB"),
-                                             error = function(e) "0.0.0") >= "2.7.3")
 knitr::opts_chunk$set(
-  eval = .soilDB_is_sufficient(),
+  eval = SoilTaxonomy:::.soilDB_metadata_available(),
   collapse = TRUE,
   comment = "#>"
 )
