Relax soilDB function def requirement for backward compatibility

--- a/vignettes/family-level_taxonomy.Rmd
+++ b/vignettes/family-level_taxonomy.Rmd
@@ -9,7 +9,7 @@ vignette: >
 
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
-  eval = SoilTaxonomy:::.soilDB_metadata_available(),
+  eval = SoilTaxonomy:::.soilDB_metadata_available(min_version = "2.0.0"),
   collapse = TRUE,
   comment = "#>"
 )
