Extensions to `parse_family()` (#36)
* Revert "(temporarily) roll back changes to parseFamily"

This reverts commit f8b306fdc8a145bdc9764158dc4141dba8ed3fbe.

* Revert "parse_family: `column_metadata` `FALSE` by default"

This reverts commit 63d30a1e39ed151d9a35ba6ee08cb9d8ab72f7ec.

* Safe vignette

* Add data.table back to Imports

* NAMESPACE/examples

* Cleanup

* Relax soilDB function def requirement for backward compatibility

* Add reverted R-CMD-check for devel aqp/soilDB back in

* Fix R<4.0 errors?

* typo

* Docs

* Fix logic + docs

* run example

* dont skip

* Missed one?

--- a/vignettes/family-level_taxonomy.Rmd
+++ b/vignettes/family-level_taxonomy.Rmd
@@ -9,6 +9,7 @@ vignette: >
 
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
+  eval = SoilTaxonomy:::.soilDB_metadata_available(min_version = "2.0.0"),
   collapse = TRUE,
   comment = "#>"
 )
@@ -56,7 +57,7 @@ head(ST_family_classes)
 Here we determine the family-level classes for a single taxonomic family and match them to the class descriptions stored in `ST_family_classes`. Here we set `column_metadata=FALSE` to not attempt to parse the family class components into their corresponding NASIS domains (requires soilDB).
 
 ```{r}
-afamily_classes <- parse_family("fine-loamy, mixed, semiactive, mesic ultic haploxeralfs")$classes_split[[1]]
+afamily_classes <- parse_family("fine-loamy, mixed, semiactive, mesic ultic haploxeralfs", column_metadata = FALSE)$classes_split[[1]]
 class_descriptions <- subset(ST_family_classes, classname %in% afamily_classes)
 class_descriptions[match(afamily_classes, class_descriptions$classname),]
 ```
