--- a/vignettes/family-level_taxonomy.Rmd
+++ b/vignettes/family-level_taxonomy.Rmd
@@ -19,9 +19,9 @@ knitr::opts_chunk$set(
 library(SoilTaxonomy)
 ```
 
-## `parse_family`
+## `parse_family()`
 
-The function `parse_family` provides a way to separate lower taxonomic levels ("family-level classes") from the higher taxonomic levels (Order, Suborder, Great Group, and Subgroup) in a soil taxon name.
+The function `parse_family()` provides a way to separate lower taxonomic levels ("family-level classes") from the higher taxonomic levels (Order, Suborder, Great Group, and Subgroup) in a soil taxon name.
 
 The user provides a vector of family names, and the result is a `data.frame` containing: 
 
@@ -54,7 +54,7 @@ data("ST_family_classes")
 head(ST_family_classes)
 ```
 
-Here we determine the family-level classes for a single taxonomic family and match them to the class descriptions stored in `ST_family_classes`. Here we set `column_metadata=FALSE` to not attempt to parse the family class components into their corresponding NASIS domains (requires soilDB).
+Here we determine the family-level classes for a single taxonomic family and match them to the class descriptions stored in `ST_family_classes`. Here we set `parse_family(..., column_metadata=FALSE)` to _not_ parse family components into corresponding NASIS domains (requires soilDB).
 
 ```{r}
 afamily_classes <- parse_family("fine-loamy, mixed, semiactive, mesic ultic haploxeralfs", column_metadata = FALSE)$classes_split[[1]]
