--- a/vignettes/taxon-letter-codes.Rmd
+++ b/vignettes/taxon-letter-codes.Rmd
@@ -29,9 +29,9 @@ In the _SoilTaxonomy_ package the `level` argument is used by some functions to 
 library(SoilTaxonomy)
 ```
 
-## `taxon_to_taxon_code`
+## `taxon_to_taxon_code()`
 
-`taxon_to_taxon_code` converts a taxon name (Soil Order, Suborder, Great Group, or Subgroup) to a letter code that corresponds to the logical position of that taxon in the Keys to Soil Taxonomy. 
+`taxon_to_taxon_code()` converts a taxon name (Soil Order, Suborder, Great Group, or Subgroup) to a letter code that corresponds to the logical position of that taxon in the Keys to Soil Taxonomy. 
 
 _Gelisols_ are the first Soil Order to key out and are given letter code "A"
 
@@ -72,9 +72,9 @@ taxon_to_taxon_code("typic haploxerolls")
 
 From this code we infer that the _Haploxerolls_ key has $26+8=34$ subgroups corresponding to the range from `IFFA` to `IFFZ` _plus_ `IFFZa` to `IFFZh`.
 
-## `taxon_code_to_taxon`
+## `taxon_code_to_taxon()`
 
-We can use a vector of letter codes to do the inverse operation with `taxon_code_to_taxon `.
+We can use a vector of letter codes to do the inverse operation with `taxon_code_to_taxon()`.
 
 Above we determined the _Glacistels_ Key contains three taxa with codes `"AABA"`, `"AABB"` and `"AABC"`. Let's convert those codes to taxon names.
 
@@ -82,15 +82,15 @@ Above we determined the _Glacistels_ Key contains three taxa with codes `"AABA"`
 taxon_code_to_taxon(c("AABA", "AABB", "AABC"))
 ```
 
-## `taxon_to_level`
+## `taxon_to_level()`
 
-We can infer from the length of the four-letter codes that all of the above are subgroup-level taxa. `taxon_to_level` confirms this.
+We can infer from the length of the four-letter codes that all of the above are subgroup-level taxa. `taxon_to_level()` confirms this.
 
 ```{r}
 taxon_to_level(c("Hemic Glacistels","Sapric Glacistels","Typic Glacistels"))
 ```
 
-`taxon_to_level` can also identify a fifth (lower-level) _family_ tier (`level="family"`). Soil family differentia are not handled in the Order to Subgroup keys. Family names are defined by concatenating comma-separated class names on to the subgroup. Classes used in family names are determined by specific keys and apply variably depending on the subgroup-level taxonomy.
+`taxon_to_level()` can also identify a fifth (lower-level) _family_ tier (`level="family"`). Soil family differentia are not handled in the Order to Subgroup keys. Family names are defined by concatenating comma-separated class names on to the subgroup. Classes used in family names are determined by specific keys and apply variably depending on the subgroup-level taxonomy.
 
 For instance, the soil family `"Fine, mixed, semiactive, mesic Ultic Haploxeralfs"` includes a particle-size class (`"fine"`), a mineralogy class (`"mixed"`), a cation exchange capacity (CEC) activity class (`"semiactive"`) and a temperature class (`"mesic"`)
 
@@ -98,9 +98,9 @@ For instance, the soil family `"Fine, mixed, semiactive, mesic Ultic Haploxeralf
 taxon_to_level("Fine, mixed, semiactive, mesic Ultic Haploxeralfs")
 ```
 
-## `getTaxonAtLevel`
+## `getTaxonAtLevel()`
 
-A wrapper method around taxon letter code functionality is `getTaxonAtLevel`. 
+A wrapper method around taxon letter code functionality is `getTaxonAtLevel()`. 
 
 Say that you have family-level taxon above and you want to determine the taxonomy at a higher (less detailed) level. 
 You can determine what to remove (family and subgroup-level modifiers) to get the Great Group using `getTaxonAtLevel(level="greatgroup")`
@@ -117,9 +117,9 @@ For example, we request the subgroup from suborder (`"Folists"`) level taxon nam
 getTaxonAtLevel("Folists", level = "subgroup")
 ```
 
-## `getParentTaxa`
+## `getParentTaxa()`
 
-Another wrapper method around taxon letter code functionality is `getParentTaxa`. This function will enumerate the tiers above a particular taxon.
+Another wrapper method around taxon letter code functionality is `getParentTaxa()`. This function will enumerate the tiers above a particular taxon.
 
 ```{r}
 getParentTaxa("Fine, mixed, semiactive, mesic Ultic Haploxeralfs")
@@ -137,19 +137,19 @@ And converting the internally used taxon codes to taxon names can be disabled wi
 getParentTaxa(code = c("BAA","BAB"), convert = FALSE)
 ```
 
-## `decompose_taxon_code`
+## `decompose_taxon_code()`
 
-For more general cases `decompose_taxon_code` might be useful. This is a function used by many of the above methods that returns a nested list result containing the letter code hierarchy.
+For more general cases `decompose_taxon_code()` might be useful. This is a function used by many of the above methods that returns a nested list result containing the letter code hierarchy.
 
 ```{r}
 decompose_taxon_code(c("BAA","BAB"))
 ```
 
-## `preceding_taxon_codes` and `relative_taxon_code_position`
+## `preceding_taxon_codes()` and `relative_taxon_code_position()`
 
-Another pair of functions that might be useful for comparing relative positions within Keys, or the number of "steps" that it takes to reach a particular taxon, is `preceding_taxon_codes` and `relative_taxon_code_positon`.
+Other unctions useful for comparing relative positions within Keys, or the number of "steps" that it takes to reach a particular taxon, are `preceding_taxon_codes()` and `relative_taxon_code_positon()`.
 
-`preceding_taxon_codes` returns a list of vectors containing all preceding codes. 
+`preceding_taxon_codes()` returns a list of vectors containing all preceding codes. 
 
 For example, the `AA` suborder key precedes `AB`. And within the `AB` key `ABA` and `ABB` precede `ABC`.
 
@@ -157,7 +157,7 @@ For example, the `AA` suborder key precedes `AB`. And within the `AB` key `ABA` 
 preceding_taxon_codes("ABC")
 ```
 
-`relative_taxon_code_position` counts how many taxa key out before a taxon plus $1$ (to get _the_ taxon position).
+`relative_taxon_code_position()` counts how many taxa key out before a taxon plus $1$ (to get _the_ taxon position).
 
 ```{r}
 relative_taxon_code_position(c("A","AA","AAA","AAAA",
