--- a/vignettes/family-level_taxonomy.Rmd
+++ b/vignettes/family-level_taxonomy.Rmd
@@ -54,7 +54,7 @@ data("ST_family_classes")
 head(ST_family_classes)
 ```
 
-Here we determine the family-level classes for a single taxonomic family and match them to the class descriptions stored in `ST_family_classes` using `get_ST_family_classes()`. Here we set `parse_family(..., column_metadata=FALSE)` to _not_ parse family components into corresponding NASIS domains (requires soilDB).
+Here we determine the family-level classes for a single taxonomic family and match them to the class descriptions stored in `ST_family_classes` using `get_ST_family_classes()`. We set `parse_family(..., column_metadata=FALSE)` to _not_ parse family components into corresponding NASIS domains (requires soilDB).
 
 ```{r}
 f <- "fine-loamy, mixed, semiactive, mesic ultic haploxeralfs"
