--- a/README.Rmd
+++ b/README.Rmd
@@ -141,16 +141,8 @@ cat(explainST(taxon_code_to_taxon("ABCD"))) # ABCD = gypsic anhyturbels
 res <- lapply(LETTERS[1:12], function(l) cat(explainST(taxon_code_to_taxon(l)), "\n\n"))
 ```
 
-## Static Databases
+# Citation
 
-The `./inst/extdata` folder (formerly `./databases`) of the GitHub repository formerly contained data tables related to taxonomic and map unit concepts within the U.S. Soil Survey Geographic Database (SSURGO).
-
-These databases included: 
-
- - Statistics on taxonomic subgroups, family-level components, and soil series. 
- 
- - MLRA Overlap tables for series, national map unit symbols and map unit keys. 
- 
- - Summaries of KSSL records per series as well as geomorphic position, parent material origin and kind.
- 
-These tables have been moved to a dedicated repository called [SoilWeb-data](https://github.com/ncss-tech/SoilWeb-data).
+```{r}
+citation("SoilTaxonomy")
+```
